--- a/Scripts/05_Final_Active_2020_Analysis.ipynb
+++ b/Scripts/05_Final_Active_2020_Analysis.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -176,6 +176,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Path to the Indonesia shape file\n",
+    "indo_path = \"../../Data/gadm41_IDN_shp/gadm41_IDN_0.shp\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [
@@ -201,7 +211,7 @@
    ],
    "source": [
     "# Define relative paths from the script's directory\n",
-    "destination_directory = os.path.join(\"..\", \"..\", \"Data\", \"GWIS_2021\", \"Final\", \"all_final\")  \n",
+    "destination_directory = os.path.join(\"..\", \"..\", \"Data\", \"GWIS_2021\", \"Final\")  \n",
     "combined_shapefile_path = os.path.join(destination_directory, 'all_final.shp')  \n",
     "\n",
     "# Use glob to find all shapefiles\n",
