--- a/Scripts/05_Final_Active_2020_Analysis.ipynb
+++ b/Scripts/05_Final_Active_2020_Analysis.ipynb
@@ -171,7 +171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Combinng all the shape files and saving. "
+    "Combing all the shape files and saving. "
    ]
   },
   {
