--- a/Scripts/05_Final_Active_2020_Analysis.ipynb
+++ b/Scripts/05_Final_Active_2020_Analysis.ipynb
@@ -4,7 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Forest Fire Total Areas FIltering For Indonesia"
+    "\n",
+    "# Project Master's Thesis: Forest Fire on Socioeconomic Outcomes in Indonesia\n",
+    "## Author: Lokesh Pandey\n",
+    "### Date: 05.02.2025\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Forest Fire Total Areas Filtering For Indonesia"
    ]
   },
   {
@@ -17,8 +27,7 @@
     "import glob\n",
     "import geopandas as gpd\n",
     "import pandas as pd  # Ensure pandas is imported\n",
-    "import shutil\n",
-    "from multiprocessing import Pool, cpu_count\n"
+    "import shutil\n"
    ]
   },
   {
