--- a/Scripts/06_Daily_Globfire.ipynb
+++ b/Scripts/06_Daily_Globfire.ipynb
@@ -4,16 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Filtering Daily Burned Areas for Forest Fires in Indonesia"
+    "\n",
+    "# Project Master's Thesis: Forest Fire on Socioeconomic Outcomes in Indonesia\n",
+    "## Author: Lokesh Pandey\n",
+    "### Date: 05.02.2025\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Filtering Daily Burned Areas for Forest Fires in Indonesia"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import libraries\n",
     "import os\n",
     "import glob\n",
     "import geopandas as gpd\n",
