--- a/Scripts/ESRI_wildfire_dta_download.ipynb
+++ b/Scripts/ESRI_wildfire_dta_download.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Project Master's Thesis: Forest Fire on Socioeconomic Outcomes in Indonesia"
+    "\n",
+    "# Project Master's Thesis: Forest Fire on Socioeconomic Outcomes in Indonesia\n",
+    "## Author: Lokesh Pandey\n",
+    "### Date: 05.02.2025\n"
    ]
   },
   {
