--- a/Scripts/ESRI_wildfire_dta_download.ipynb
+++ b/Scripts/ESRI_wildfire_dta_download.ipynb
@@ -1667,6 +1667,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "All these ESRI files and filtered content are zipped into ```ESRI.zip```.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
